fixed squishy poster?

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ html {
 }
 img {
   max-width: 100%;
-  height: auto;
   border-radius: 6px;
 }
 body {
@@ -159,7 +158,7 @@ body {
 
 .thumbnail {
   width: 300px;
-  height: 400px;
+  height: auto;
   overflow: hidden;
 }
 
